Added endpoint to deliver only games to be shown in scoreboard
